# scalper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: risk.yaml
docs/: blueprint.md  phase1_criteria.md
scripts/: download_data.py  phase1_eval.py
src/goldscalper/: __init__.py  cli.py  config.py  models.py
src/goldscalper/backtest/: __init__.py  engine.py  evaluation.py  metrics.py  runner.py
src/goldscalper/broker/: __init__.py  base.py  mt5_adapter.py  paper.py
src/goldscalper/data/: __init__.py  bars.py  dukascopy.py  synthetic.py
src/goldscalper/journal/: __init__.py  journal.py
src/goldscalper/risk/: __init__.py  engine.py  news.py  sizing.py
src/goldscalper/strategies/: __init__.py  asian_breakout.py  base.py  vwap_reversion.py
tests/: conftest.py  test_backtest.py  test_bars.py  test_download_range.py  test_dukascopy_codec.py  test_evaluation.py  test_journal.py  test_killswitch.py  test_news_filter.py  test_paper_broker.py  test_risk_engine.py  test_sizing.py  test_strategies.py  test_stress_run.py
